--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -20,12 +20,12 @@ rules:
     - pushc
     - resume
     - save
-    - self
     - send
     - setpc
     - slice
     - start
     - stop
+    - uuid
     - wait
   argument:
     - '::Symbol'
@@ -54,8 +54,6 @@ rules:
     - []
   save:
     - []
-  self:
-    - []
   send:
     - []
   setpc:
@@ -65,6 +63,8 @@ rules:
   start:
     - []
   stop:
+    - []
+  uuid:
     - []
   wait:
     - []
