UUID -> PUID (prog unique identifier)

--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -25,7 +25,7 @@ rules:
     - slice
     - start
     - stop
-    - uuid
+    - puid
     - wait
   argument:
     - '::Symbol'
@@ -64,7 +64,7 @@ rules:
     - []
   stop:
     - []
-  uuid:
+  puid:
     - []
   wait:
     - []
