Add an +event+ opcode and an event manager in VM.

--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -9,6 +9,7 @@ rules:
     - '::Integer'
     - '::Symbol'
   instruction:
+    - event
     - fetch
     - invoke
     - new
@@ -27,6 +28,8 @@ rules:
     - stop
     - puid
     - wait
+  event:
+    - [ 'symbol_arg?' ]
   fetch:
     - []
   invoke:
