--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -11,6 +11,7 @@ rules:
   instruction:
     - event
     - fetch
+    - fork
     - invoke
     - new
     - notify
@@ -32,6 +33,8 @@ rules:
     - [ 'symbol_arg?' ]
   fetch:
     - [ 'argument?' ]
+  fork:
+    - [ 'label_arg?' ]
   invoke:
     - []
   new:
@@ -71,6 +74,9 @@ rules:
     - integer_arg
     - string_arg
     - module_arg
+  label_arg:
+    - symbol_arg
+    - integer_arg
   symbol_arg:  '::Symbol'
   integer_arg: '::Integer'
   string_arg:  '::String'
