Add an +end+ opcode.

--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -21,6 +21,7 @@ rules:
     - fetch
     - fork
     - cont
+    - end
     - then
     - schedule
     - unschedule
@@ -57,6 +58,8 @@ rules:
     - [ 'label_arg?' ]
   cont:
     - [ 'label_arg?' ]
+  end:
+    - []
   then:
     - [ 'label_arg?' ]
   schedule:
