--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -19,6 +19,7 @@ rules:
     - self
     - parent
     - fetch
+    - pick
     - fork
     - cont
     - end
@@ -52,6 +53,8 @@ rules:
     - []
   fetch:
     - [ 'argument?' ]
+  pick:
+    - []
   fork:
     - [ 'label_arg?' ]
   cont:
