--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -34,6 +34,7 @@ rules:
     # stack
     - pop
     - push
+    - flip
     - group
   # generic
   send:
@@ -78,6 +79,8 @@ rules:
     - [ 'integer_arg?' ]
   push:
     - [ argument ]
+  flip:
+    - []
   group:
     - [ 'integer_arg?' ]
   # events
