Add a kernel +be+ opcode.

--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -9,6 +9,8 @@ rules:
     - '::Integer'
     - '::Symbol'
   instruction:
+    # kernel
+    - be
     # generic
     - send
     - invoke
@@ -36,6 +38,9 @@ rules:
     - push
     - flip
     - group
+  # kernel
+  be:
+    - []
   # generic
   send:
     - [ 'symbol_arg?' ]
