Add support for array arguments.

--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -96,6 +96,7 @@ rules:
     - integer_arg
     - string_arg
     - module_arg
+    - array_arg
   label_arg:
     - symbol_arg
     - integer_arg
@@ -103,3 +104,4 @@ rules:
   integer_arg: '::Integer'
   string_arg:  '::String'
   module_arg:  '::Module'
+  array_arg:   '::Array'
