--- a/lib/gisele/vm/gvm/gvm.sexp.yml
+++ b/lib/gisele/vm/gvm/gvm.sexp.yml
@@ -25,7 +25,6 @@ rules:
     - fork
     - cont
     - end
-    - then
     - schedule
     - unschedule
     - wait
@@ -38,6 +37,9 @@ rules:
     - push
     - flip
     - group
+    # code
+    - then
+    - skipnil
   # kernel
   be:
     - []
@@ -67,8 +69,6 @@ rules:
     - [ 'label_arg?' ]
   end:
     - []
-  then:
-    - [ 'label_arg?' ]
   schedule:
     - []
   unschedule:
@@ -88,6 +88,11 @@ rules:
     - []
   group:
     - [ 'integer_arg?' ]
+  # code
+  skipnil:
+    - [ 'integer_arg?' ]
+  then:
+    - [ 'label_arg?' ]
   # events
   event:
     - [ 'symbol_arg?' ]
