--- a/lib/gisele/vm/bytecode/grammar.sexp.yml
+++ b/lib/gisele/vm/bytecode/grammar.sexp.yml
@@ -104,6 +104,7 @@ rules:
   event:
     - [ 'symbol_arg?' ]
   argument:
+    - boolean_arg
     - symbol_arg
     - integer_arg
     - string_arg
@@ -113,6 +114,9 @@ rules:
   label_arg:
     - symbol_arg
     - integer_arg
+  boolean_arg:
+    - true
+    - false
   symbol_arg:  '::Symbol'
   integer_arg: '::Integer'
   string_arg:  '::String'
