--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
-bundler_args: --without=release doc benchmarks
+bundler_args: --without=release doc benchmarks extra
 rvm:
   - 1.9.2
   - 1.9.3
